--- a/style.css
+++ b/style.css
@@ -38,8 +38,10 @@ h2.timer {
   top: 30px;
   left: 30px;
   background: white;
-  width: 400px;
-  height: 800px;
+  width: 300px;
+  height: 500px;
+  border: 5px solid red;
+  border-radius: 10px;
 }
 
 .instructions h1 {
