Style sample solve and solution buttons

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 
 .solve:hover {
   transition: 1s;
-  background: yellow;
+  background: purple;
   cursor: pointer;
 }
 
@@ -68,13 +68,14 @@ h2 {
 
 .instructions {
   font-family: 'AMC', sans-serif;
+  font-weight: bold;
   opacity: 1;
   transition: 1s;
   position: absolute;
   top: 30px;
   left: 90px;
-  background: white;
-  width: 320px;
+  background: yellow;
+  width: 330px;
   height: 500px;
   border: 5px solid red;
   border-radius: 10px;
@@ -114,5 +115,5 @@ h2 {
 .sample:hover {
   transition: 1s;
   cursor: pointer;
-  background: yellow;
+  background: purple;
 }
