--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   left: 60px;
   top: 520px;
   background: green;
-  max-width: 263px;
+  max-width: 300px;
 }
 
 .scramble:hover {
@@ -83,6 +83,7 @@ h2 {
 
 .instructions h1 {
   font-family: 'AMC', sans-serif;
+  margin-top: 15px;
   margin-left: 20px;
 }
 
