--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 body {
   position: relative;
   margin: 0px;
+  width: 100%;
+  height: 100%;
   background-color: #000000;
   overflow: hidden;
 }
@@ -13,26 +15,24 @@ body {
 #what {
   z-index: -1;
   position: absolute;
-  top: 0px;
-  left: 50px;
+  top: -50px;
+  left: -50px;
   min-width: 1000px;
-  min-height: 600px;
-  width: 100vw;
+  min-height: 500px;
+  width: 120vw;
   height: 60vw;
-  /*background: red;*/
 }
 
 #canvas {
-  /*margin-left: 300px;*/
   height: 100px;
 }
 
 .title {
   transition: 10s;
   position: absolute;
-  top: 30px;
+  top: -15px;
   left: 260px;
-  width: 50%;
+  width: 65%;
   min-width: 500px;
   text-align: center;
   font-family: 'AMC', sans-serif;
