--- a/style.css
+++ b/style.css
@@ -76,11 +76,11 @@ body {
   border: 3px solid red;
   border-radius: 8px;
   font-size: 20px;
-  background: green;
+  background: yellow;
 }
 
 .button:hover {
-  background: purple;
+  background: green;
   cursor: pointer;
 }
 
