--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ body {
 }
 
 .instructions {
-  font-family: 'AMC', sans-serif;
+  margin-bottom: 20px;
   padding: 10px;
+  font-family: 'AMC', sans-serif;
   background: yellow;
   border: 3px solid red;
   border-radius: 10px;
@@ -69,6 +70,7 @@ body {
   margin: 5px 3px 5px 0px;
   font-family: 'AMC', sans-serif;
   text-align: center;
+  width: 94%;
   padding: 5px;
   border: 3px solid red;
   border-radius: 8px;
@@ -77,7 +79,7 @@ body {
 }
 
 .button:hover {
-  background: green;
+  width: 110%;
   cursor: pointer;
 }
 
