--- a/style.css
+++ b/style.css
@@ -25,23 +25,18 @@ body {
 }
 
 .title {
-  transition: 10s;
-  position: absolute;
-  top: -15px;
-  left: 260px;
-  width: 65%;
-  min-width: 500px;
-  text-align: center;
-  font-family: 'AMC', sans-serif;
-  font-size: 80px;
   color: blue;
+  transition: color 10s;
+  font-family: 'AMC', sans-serif;
+  font-size: 6vh;
 }
 
 #sidebar {
+  position: absolute;
   z-index: 10;
-  width: 260px;
+  width: 38vh;
   margin: 10px;
-  margin-top: 46px;
+  font-size: 2vh;
 }
 
 .instructions {
@@ -53,16 +48,21 @@ body {
   border-radius: 10px;
 }
 
-.instructions span.section {
+.instructions .section {
   margin-top: 10px;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 2.5vh;
 }
 
 .instructions p {
-  margin: 0px;
+  margin: 5px;
   font-family: 'AMC', sans-serif;
-  font-size: 18px;
+}
+
+.left {
+  float: left;
+  margin-right: 4px;
+  min-width: 30px;
 }
 
 .button {
@@ -74,7 +74,7 @@ body {
   padding: 5px;
   border: 3px solid red;
   border-radius: 8px;
-  font-size: 20px;
+  font-size: 2.5vh;
   background: yellow;
 }
 
