--- a/style.css
+++ b/style.css
@@ -84,18 +84,17 @@ body {
 }
 
 .timer {
-  margin-top: 20px;
   text-align: center;
   font-family: 'AMC', sans-serif;
   transition: 500ms;
   color: white;
-  font-size: 64px;
+  font-size: 8vh;
 }
 
 .solve-moves {
-  margin-top: 20px;
   word-break: break-all;
+  width: 200px;
   font-family: 'AMC', sans-serif;
-  font-size: 30px;
+  font-size: 3.5vh;
   color: white;
 }
