--- a/style.css
+++ b/style.css
@@ -94,6 +94,8 @@ body {
 .solve-moves {
   word-break: break-all;
   width: 200px;
+  text-align: center;
+  margin: auto;
   font-family: 'AMC', sans-serif;
   font-size: 3.5vh;
   color: white;
