--- a/style.css
+++ b/style.css
@@ -92,14 +92,21 @@ body {
 }
 
 .list {
+  transition: 200ms;
   word-break: break-all;
   width: 200px;
   text-align: center;
+  letter-spacing: 2px;
   margin: auto;
   font-family: 'AMC', sans-serif;
   font-size: 3vh;
 }
 
+.list span {
+  transition: 200ms;
+}
+
 .undo-moves {
-  color: blue;
+  text-align: left;
+  color: red;
 }
