Show sample solve button only with 3x3 cube

--- a/style.css
+++ b/style.css
@@ -127,6 +127,10 @@ body {
   cursor: pointer;
 }
 
+.sample.button {
+  display: none;
+}
+
 .timer {
   text-align: center;
   font-family: 'AMC', sans-serif;
