Add styling for disabled buttons

--- a/style.css
+++ b/style.css
@@ -109,6 +109,11 @@ body {
   min-width: 30px;
 }
 
+.button.disabled {
+  background: #ADADAD;
+  border-color: #6D6D6D;
+}
+
 .button {
   transition: 200ms;
   margin: 5px 3px 5px 0px;
@@ -122,9 +127,10 @@ body {
   background: yellow;
 }
 
-.button:hover {
+.button.enabled:hover {
   width: 110%;
   cursor: pointer;
+  background: green;
 }
 
 .sample.button {
