Show solve moves only when cube is 5x5 or smaller

--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ body {
   font-family: 'AMC', sans-serif;
 }
 
+.instructions .display-solve {
+  display: none;
+}
+
 .left {
   float: left;
   margin-right: 4px;
