--- a/style.css
+++ b/style.css
@@ -60,10 +60,11 @@ body {
 #canvas {
   position: absolute;
   left: 350px;
-  min-width: 500px;
+  top: -50px;
+  min-width: 550px;
   width: 50vw;
   min-height: 555px;
-  height: 50vw;
+  height: 55vw;
 }
 
 .title {
