--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@ body {
   z-index: -2;
   position: relative;
   margin: 0px;
-  width: 100%;
-  height: 100%;
+  /*width: 100%;
+  height: 100%;*/
   background-color: #000000;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .backdrop {
@@ -62,12 +62,10 @@ body {
 
 #canvas {
   position: absolute;
-  left: 250px;
-  top: -50px;
-  min-width: 550px;
-  width: 80vw;
-  min-height: 600px;
-  height: 55vw;
+  float: left;
+  left: 400px;
+  width: 400px;
+  height: 400px;
 }
 
 .title {
