--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
   z-index: 100;
   transition: 300ms;
   position: absolute;
-  width: 3000px;
-  height: 3000px;
+  width: 100%;
+  height: 100%;
   background-color: black;
   opacity: 0;
 }
