--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,9 @@
+html, body {
+  height: 100%;
+}
+
 body {
-  z-index: -2;
+  // z-index: -2;
   position: relative;
   margin: 0px;
   background-color: #000000;
