--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,11 +60,8 @@ body {
   }
 }
 
-
-
 #canvas {
-  position: absolute;
-  float: left;
+  margin: auto;
   left: 400px;
   width: 400px;
   height: 400px;
