--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,24 +3,37 @@ html, body {
 }
 
 body {
-  // z-index: -2;
   position: relative;
   margin: 0px;
-  background-color: #000000;
+  font-family: 'AMC', sans-serif;
 }
 
-.backdrop {
-  z-index: 100;
-  transition: 300ms;
+#expand {
+  z-index: 10;
+  position: relative;
+  width: 100px;
+  text-align: center;
+  padding: 10px;
+  background: lightgreen;
+  border-radius: 2px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+#sidebar {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  opacity: 0;
+  width: 300px;
+  height: 500px;
+  overflow: hidden;
+  background: blue;
 }
 
-.backdrop.transition {
-  opacity: .5;
+#canvas {
+  position: relative;
+  width: 800px;
+  height: 600px;
+  margin: auto;
 }
 
 .select {
@@ -31,16 +44,9 @@ body {
   left: 0;
   right: 0;
   width: 400px;
-  background: white;
-  margin-left: auto;
-  margin-right: auto;
-  font-family: 'AMC', sans-serif;
+  background: #c3c3c3;
+  margin: auto;
   text-align: center;
-
-  &.show {
-    opacity: 1;
-    margin-top: 30px;
-  }
 
   .cube-size {
     padding: 10px;
@@ -51,7 +57,7 @@ body {
 
   .cube-size span:hover {
     cursor: pointer;
-    background-color: gainsboro;
+    background-color: gray;
     border-radius: 3px;
   }
 
@@ -60,96 +66,89 @@ body {
   }
 }
 
-#canvas {
-  margin: auto;
-  left: 400px;
-  width: 400px;
-  height: 400px;
-}
-
-.title {
-  color: blue;
-  transition: color 10s;
-  font-family: 'AMC', sans-serif;
-  font-size: 6vh;
-}
-
-#sidebar {
-  position: absolute;
-  z-index: 10;
-  width: 38vh;
-  margin: 30px;
-  font-size: 2vh;
-}
-
-.instructions {
-  margin-bottom: 20px;
-  padding: 10px;
-  font-family: 'AMC', sans-serif;
-  background: yellow;
-  border: 3px solid red;
-  border-radius: 10px;
-
-  .section {
-    margin-top: 10px;
-    font-weight: bold;
-    font-size: 2.5vh;
-  }
-
-  p {
-    margin: 5px;
-    font-family: 'AMC', sans-serif;
-  }
-
-  .display-solve {
-    display: none;
-  }
-}
-
-
-.left {
-  float: left;
-  margin-right: 4px;
-  min-width: 30px;
-}
-
-.button {
-  transition: 200ms;
-  margin: 5px 3px 5px 0px;
-  font-family: 'AMC', sans-serif;
-  font-size: 2vh;
-  text-align: center;
-  width: 94%;
-  padding: 5px;
-  border: 3px solid red;
-  border-radius: 8px;
-  background: yellow;
-
-  &.disabled {
-    background: #ADADAD;
-    border-color: #6D6D6D;
-  }
-
-  &.enabled:hover {
-    width: 110%;
-    cursor: pointer;
-    background: green;
-  }
-
-  &.enabled:active {
-    background: red;
-  }
-}
-
-
-.sample.button {
-  display: none;
-}
-
-.timer {
-  text-align: center;
-  font-family: 'AMC', sans-serif;
-  transition: 500ms;
-  color: white;
-  font-size: 8vh;
-}
+// .title {
+//   color: blue;
+//   transition: color 10s;
+//   font-family: 'AMC', sans-serif;
+//   font-size: 6vh;
+// }
+//
+// #sidebar {
+//   position: absolute;
+//   z-index: 10;
+//   width: 38vh;
+//   margin: 30px;
+//   font-size: 2vh;
+// }
+//
+// .instructions {
+//   margin-bottom: 20px;
+//   padding: 10px;
+//   font-family: 'AMC', sans-serif;
+//   background: yellow;
+//   border: 3px solid red;
+//   border-radius: 10px;
+//
+//   .section {
+//     margin-top: 10px;
+//     font-weight: bold;
+//     font-size: 2.5vh;
+//   }
+//
+//   p {
+//     margin: 5px;
+//     font-family: 'AMC', sans-serif;
+//   }
+//
+//   .display-solve {
+//     display: none;
+//   }
+// }
+//
+//
+// .left {
+//   float: left;
+//   margin-right: 4px;
+//   min-width: 30px;
+// }
+//
+// .button {
+//   transition: 200ms;
+//   margin: 5px 3px 5px 0px;
+//   font-family: 'AMC', sans-serif;
+//   font-size: 2vh;
+//   text-align: center;
+//   width: 94%;
+//   padding: 5px;
+//   border: 3px solid red;
+//   border-radius: 8px;
+//   background: yellow;
+//
+//   &.disabled {
+//     background: #ADADAD;
+//     border-color: #6D6D6D;
+//   }
+//
+//   &.enabled:hover {
+//     width: 110%;
+//     cursor: pointer;
+//     background: green;
+//   }
+//
+//   &.enabled:active {
+//     background: red;
+//   }
+// }
+//
+//
+// .sample.button {
+//   display: none;
+// }
+//
+// .timer {
+//   text-align: center;
+//   font-family: 'AMC', sans-serif;
+//   transition: 500ms;
+//   color: white;
+//   font-size: 8vh;
+// }
