Start timing correctly

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,18 @@ body {
   font-family: 'AMC', sans-serif;
 }
 
+#timer {
+  z-index: -1;
+  position: absolute;
+  font-size: 50px;
+  width: 100%;
+
+  p {
+    width: 100px;
+    margin: auto;
+  }
+}
+
 #scramble {
   display: inline-block;
   text-align: center;
